--- a/BedLightESP/Resources/page/style.css
+++ b/BedLightESP/Resources/page/style.css
@@ -1,54 +1,81 @@
-        * {
-            box-sizing: border-box;
-        }
+* {
+    box-sizing: border-box;
+}
 
-        body {
-            background-color: #121212;
-            color: #ffffff;
-            font-family: Arial, sans-serif;
-        }
+body {
+    background-color: #121212;
+    color: #ffffff;
+    font-family: Arial, sans-serif;
+}
 
-        h1,
-        legend {
-            text-align: center;
-        }
+h1,
+legend {
+    text-align: center;
+}
 
-        form {
-            max-width: 250px;
-            margin: 10px auto 0 auto;
-        }
+form {
+    max-width: 350px;
+    margin: 10px auto 0 auto;
+}
 
-        .center-message {
-            text-align: center;
-        }
+.center-message {
+    text-align: center;
+}
 
-        fieldset {
-            border-radius: 5px;
-            box-shadow: 3px 3px 15px rgba(255, 255, 255, 0.1);
-            font-size: large;
-            border: 2px solid;
-            border-image: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet) 1;
-        }
+.password-div-container {
+}
 
-        input, select {
-            width: 100%;
-            padding: 4px;
-            margin-bottom: 8px;
-            border: 1px solid #888;
-            border-radius: 3px;
-            font-size: medium;
-            background-color: #333;
-            color: #fff;
-        }
+#password {
+    width: 100%;
+    padding: 8px 0px;
+    border-width: 0px 0px 2px 0px;
+    outline: none;
+}
 
-        input[type=submit]:hover {
-            cursor: pointer;
-            background-color: #444;
-            transition: 0.5s;
-        }
+.showpassword_box {
+    display: flex;
+    margin-top: -10px;
+}
 
-        @media only screen and (max-width: 768px) {
-            form {
-                max-width: 100%;
-            }
-        }
+.showpassword_box p {
+    margin-left: 10px;
+}
+
+.box input[type="checkbox"] {
+    width: 16px;
+}
+
+.box input[type="checkbox"] {
+    width: 16px;
+}
+
+fieldset {
+    border-radius: 5px;
+    box-shadow: 3px 3px 15px rgba(255, 255, 255, 0.1);
+    font-size: large;
+    border: 2px solid;
+    border-image: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet) 1;
+}
+
+input, select {
+    width: 100%;
+    padding: 4px;
+    margin-bottom: 8px;
+    border: 1px solid #888;
+    border-radius: 3px;
+    font-size: medium;
+    background-color: #333;
+    color: #fff;
+}
+
+input[type=submit]:hover {
+    cursor: pointer;
+    background-color: #444;
+    transition: 0.5s;
+}
+
+@media only screen and (max-width: 768px) {
+    form {
+        max-width: 100%;
+    }
+}
