fixed startup error with touch and webserver. new default color can no be set in web

--- a/BedLightESP/Resources/page/style.css
+++ b/BedLightESP/Resources/page/style.css
@@ -8,6 +8,10 @@ body {
     font-family: Arial, sans-serif;
 }
 
+#color_selector {
+    padding: 0px 2px 0px 2px;
+}
+
 h1,
 legend {
     text-align: center;
