--- a/BedLightESP/Resources/page/style.css
+++ b/BedLightESP/Resources/page/style.css
@@ -13,12 +13,14 @@ h1 {
 }
 
 .button-container {
-    display: flex;
-    justify-content: center;
-    margin: 20px 0;
+	display: flex;
+    align-items: center;
+    width: 100%;
+    margin: 10px 0;
 }
 
 .control-button {
+	width: 100%;
     background-color: #4CAF50;
     border: none;
     color: white;
@@ -27,14 +29,25 @@ h1 {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 4px 2px;
     cursor: pointer;
     border-radius: 8px;
     transition: background-color 0.3s;
 }
 
 .control-button:hover {
-    background-color: #45a049;
+	background-color: #45a049;
+}
+	
+.control-button-main {
+    margin: 20px auto;
+    width: 80%;
+    max-width: 600px;
+    background: #1e1e1e;
+    padding: 10px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border: 2px solid;
+    border-image: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet) 1;
 }
 
 form {
