--- a/BedLightESP/Resources/page/style.css
+++ b/BedLightESP/Resources/page/style.css
@@ -1,37 +1,37 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #121212;
-    color: #ffffff;
+	font-family: Arial, sans-serif;
+	margin: 0;
+	padding: 0;
+	background-color: #121212;
+	color: #ffffff;
 }
 
 h1 {
-    text-align: center;
-    margin-top: 20px;
-    color: #ffffff;
+	text-align: center;
+	margin-top: 20px;
+	color: #ffffff;
 }
 
 .button-container {
 	display: flex;
-    align-items: center;
-    width: 100%;
-    margin: 10px 0;
+	align-items: center;
+	width: 100%;
+	margin: 10px 0;
 }
 
 .control-button {
 	width: 100%;
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    cursor: pointer;
-    border-radius: 8px;
-    transition: background-color 0.3s;
+	background-color: #4CAF50;
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	cursor: pointer;
+	border-radius: 8px;
+	transition: background-color 0.3s;
 }
 
 .control-button:hover {
@@ -39,111 +39,122 @@ h1 {
 }
 	
 .control-button-main {
-    margin: 20px auto;
-    width: 80%;
-    max-width: 600px;
-    background: #1e1e1e;
-    padding: 10px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    border: 2px solid;
-    border-image: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet) 1;
+	margin: 20px auto;
+	width: 80%;
+	max-width: 600px;
+	background: #1e1e1e;
+	padding: 10px;
+	border-radius: 8px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+	border: 2px solid;
+	border-image: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet) 1;
 }
 
 form {
-    margin: 20px auto;
-    width: 80%;
-    max-width: 600px;
-    background: #1e1e1e;
-    padding: 10px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    border: 2px solid;
-    border-image: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet) 1;
+	margin: 20px auto;
+	width: 80%;
+	max-width: 600px;
+	background: #1e1e1e;
+	padding: 10px;
+	border-radius: 8px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+	border: 2px solid;
+	border-image: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet) 1;
 }
 
 fieldset {
-    border: none;
-    margin-bottom: 0px;
+	border: none;
+	margin-bottom: 0px;
 }
 
 legend {
-    font-size: 1.2em;
-    margin-bottom: 10px;
-    color: #ffffff;
+	font-size: 1.2em;
+	margin-bottom: 10px;
+	color: #ffffff;
 }
 
 input[type="text"],
 input[type="password"],
 input[type="color"],
 select {
-    width: 100%;
-    padding: 10px;
-    margin: 5px 0 10px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    background-color: #333333;
-    color: #ffffff;
+	width: 100%;
+	padding: 10px;
+	margin: 5px 0 10px 0;
+	display: inline-block;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
+	background-color: #333333;
+	color: #ffffff;
 }
 
 input[type="submit"] {
-    width: 100%;
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+	width: 100%;
+	background-color: #4CAF50;
+	color: white;
+	padding: 14px 20px;
+	margin: 8px 0;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
 }
 
 input[type="submit"]:hover {
-    background-color: #45a049;
+	background-color: #45a049;
 }
 
 .password-div-container {
-    display: flex;
-    align-items: center;
-    width: 100%;
+	display: flex;
+	align-items: center;
+	width: 100%;
 }
 
 .box {
-    display: flex;
-    align-items: center;
-    width: 100%;
+	display: flex;
+	align-items: center;
+	width: 100%;
 }
 
-    .box input[type="password"] {
-        flex-grow: 1;
-    }
+.box input[type="password"] {
+	flex-grow: 1;
+}
 
 .showpassword_box {
-    display: flex;
-    align-items: center;
-    margin-left: 10px;
-    color: #ffffff;
+	display: flex;
+	align-items: center;
+	margin-left: 10px;
+	color: #ffffff;
 }
 
 .showpassword_box input[type="checkbox"] {
-    margin: 0 5px 0 0;
+	margin: 0 5px 0 0;
 }
 
 .showpassword_box p {
-    margin: 0;
+	margin: 0;
 }
 
 .center-message {
-    text-align: center;
-    margin-top: 20px;
-    color: #ffffff;
+	text-align: center;
+	margin-top: 20px;
+	color: #ffffff;
 }
 
 .control-button {
-    margin: 4px;
+	margin: 4px;
 }
 
 #color_selector {
-    padding: 0px 5px 0px 5px;
+	width: 100%;
+	padding: 0px 5px 0px 5px;
+	border-radius: 4px;
+}
+
+.gpio-container {
+	display: flex;
+	justify-content: space-between;
+}
+
+.gpio-column {
+	width: 48%;
 }
