--- a/BedLightESP/Resources/page/style.css
+++ b/BedLightESP/Resources/page/style.css
@@ -34,10 +34,10 @@ h1 {
 	transition: background-color 0.3s;
 }
 
-.control-button:hover {
-	background-color: #45a049;
-}
-	
+	.control-button:hover {
+		background-color: #45a049;
+	}
+
 .control-button-main {
 	margin: 20px auto;
 	width: 80%;
@@ -99,9 +99,9 @@ input[type="submit"] {
 	cursor: pointer;
 }
 
-input[type="submit"]:hover {
-	background-color: #45a049;
-}
+	input[type="submit"]:hover {
+		background-color: #45a049;
+	}
 
 .password-div-container {
 	display: flex;
@@ -115,9 +115,9 @@ input[type="submit"]:hover {
 	width: 100%;
 }
 
-.box input[type="password"] {
-	flex-grow: 1;
-}
+	.box input[type="password"] {
+		flex-grow: 1;
+	}
 
 .showpassword_box {
 	display: flex;
@@ -126,13 +126,13 @@ input[type="submit"]:hover {
 	color: #ffffff;
 }
 
-.showpassword_box input[type="checkbox"] {
-	margin: 0 5px 0 0;
-}
+	.showpassword_box input[type="checkbox"] {
+		margin: 0 5px 0 0;
+	}
 
-.showpassword_box p {
-	margin: 0;
-}
+	.showpassword_box p {
+		margin: 0;
+	}
 
 .center-message {
 	text-align: center;
@@ -161,27 +161,27 @@ input[type="submit"]:hover {
 
 /* Message Bubble */
 .message-bubble {
-    visibility: hidden;
-    min-width: 250px;
-    margin-left: -125px;
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    border-radius: 4px;
-    border: 1px solid purple;
-    padding: 16px;
-    position: fixed;
-    z-index: 1;
-    left: 50%;
-    bottom: 30px;
-    font-size: 17px;
+	visibility: hidden;
+	min-width: 250px;
+	margin-left: -125px;
+	background-color: #333;
+	color: #fff;
+	text-align: center;
+	border-radius: 4px;
+	border: 1px solid purple;
+	padding: 16px;
+	position: fixed;
+	z-index: 1;
+	left: 50%;
+	bottom: 30px;
+	font-size: 17px;
 }
 
-.message-bubble.show {
-	visibility: visible;
-	-webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
-	animation: fadein 0.5s, fadeout 0.5s 5s;
-}
+	.message-bubble.show {
+		visibility: visible;
+		-webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+		animation: fadein 0.5s, fadeout 0.5s 5s;
+	}
 
 @-webkit-keyframes fadein {
 	from {
@@ -230,3 +230,41 @@ input[type="submit"]:hover {
 		opacity: 0;
 	}
 }
+
+/* Modal styles */
+.modal {
+	display: none;
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgb(0,0,0);
+	background-color: rgba(0,0,0,0.4);
+	padding-top: 60px;
+}
+
+.modal-content {
+	background-color: #fefefe;
+	margin: 5% auto;
+	padding: 20px;
+	border: 1px solid #888;
+	width: 80%;
+	color: black;
+}
+
+.close {
+	color: #aaa;
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
+}
+
+	.close:hover,
+	.close:focus {
+		color: black;
+		text-decoration: none;
+		cursor: pointer;
+	}
